--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 
 
   <!-- Semantic UI -->
-  <link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="assets/semantic.min.js"></script>
+  <script src="assets/semantic.min.js"></script> -->
 
 </head>
-<body>
+<body dir="rtl" >
   <app-root></app-root>
 </body>
 </html>
