Lecturer get,delete,add

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,9 @@
   
   <link rel="stylesheet" type="text/css" href="styles.css">
 
-
-  <!-- Semantic UI -->
-  <!-- <link rel="stylesheet" type="text/css" href="assets/semantic.min.css">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="assets/semantic.min.js"></script> -->
+  <!-- font awesome -->
+  <link rel="stylesheet" type="text/css" href="assets/font-awesome/css/all.min.css">
+  <script src="assets/font-awesome/js/all.min.js"></script>
 
 </head>
 <body dir="rtl" >
