--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="assets/font-awesome/css/all.min.css">
   <script src="assets/font-awesome/js/all.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body dir="rtl" >
   <app-root></app-root>
